--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1511,7 +1511,7 @@ HierarchicalLODOutliner.TimeStamp=2025.06.07-09.35.12
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [ContentBrowser]
