--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,10 @@ MigrationBackup/
 FodyWeavers.xsd
 /Intermediate/CachedAssetRegistryDiscovery.bin
 /Intermediate/CachedAssetRegistry_0.bin
+/Intermediate/Build/SourceFileCache.bin
+/Binaries/Win64/UnrealEditor-Heros_Of_ST.patch_0.exe
+/Binaries/Win64/UnrealEditor-Heros_Of_ST.patch_0.lib
+/Binaries/Win64/UnrealEditor-Heros_Of_ST.patch_0.exp
+/Intermediate/Build/Win64/ActionHistory.bin
+/Intermediate/Build/SourceFileCache.bin
+/Saved/AutoScreenshot.png
