--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1509,9 +1509,11 @@ WidgetCarousel.TimeStamp=2025.06.07-09.35.31
 WidgetCarousel.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2025.06.07-09.35.12
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+VisualStudioTools.TimeStamp=2026.01.04-06.51.54
+VisualStudioTools.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 
 [ContentBrowser]
@@ -1523,7 +1525,7 @@ ContentBrowserDrawer.PathAreaExpanded=True
 ContentBrowserDrawer.PathSearchAreaExpanded=False
 ContentBrowserDrawer.VerticalSplitter.FixedSlotSize0=230
 ContentBrowserDrawer.VerticalSplitter.SlotSize1=1
-ContentBrowserDrawer.VerticalSplitter.SlotSize2=0.75
+ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
@@ -1544,6 +1546,7 @@ ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.JumpMRU=/All/Classes_Game/Heros_Of_ST
+ContentBrowserDrawer.JumpMRU=/All/Game
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
@@ -1592,4 +1595,8 @@ DebugTargetActor=
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PluginBrowser]
+InstalledPlugins=VisualStudioTools
+InstalledPlugins=GeneSplicer
 
