--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/scenarios/interactive_map.interactive_map
+GlobalDefaultGameMode=/Game/scenarios/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/scenarios/interactive_map.interactive_map
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
