--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,4 @@ FodyWeavers.xsd
 /Saved/Crashes
 /Saved/Autosaves/Temp
 /Saved/Autosaves/Game
+/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
