update cursor trace interface

--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,5 @@ FodyWeavers.xsd
 /Saved/Autosaves/Temp
 /Saved/Autosaves/Game
 /Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+/Saved/Autosaves/PackageRestoreData.json
+/Saved/SourceControl/UncontrolledChangelists.json
