remove main camera

--- a/.gitignore
+++ b/.gitignore
@@ -367,7 +367,7 @@ FodyWeavers.xsd
 /Intermediate/Build/Win64/ActionHistory.bin
 /Intermediate/Build/SourceFileCache.bin
 /Saved/AutoScreenshot.png
-/Binaries/Win64
+/Binaries
 /Saved/Config/CrashReportClient
 /Saved/Crashes
 /Saved/Autosaves/Temp
