--- a/Heros_Of_ST.uproject
+++ b/Heros_Of_ST.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Heros_Of_ST",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
 		}
 	],
 	"Plugins": [
