test character searcher

--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@ FodyWeavers.xsd
 /Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
 /Saved/Autosaves/PackageRestoreData.json
 /Saved/SourceControl/UncontrolledChangelists.json
+/Intermediate/Build/Win64/UnrealEditor/Inc/Heros_Of_ST/UHT/Timestamp
