--- a/.gitignore
+++ b/.gitignore
@@ -380,6 +380,7 @@ FodyWeavers.xsd
 /DerivedDataCache
 /Intermediate/Build/BuildRules
 /Intermediate/ShaderAutogen
+/Intermediate/ReimportCache
 *.code-workspace
 /Content/GFX
 /Intermediate/Build/Win64/Heros_Of_STEditor/DebugGame/Heros_Of_STEditor.uhtmanifest
